# rust_auth_server

./: Cargo.toml  README.md
src/: handlers.rs  main.rs  models.rs
src/data/: models.rs
