[package]
name = "rust_auth_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
reqwest = "0.11.22"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7.1"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
google-signin = "0.3.0"
jsonwebtoken = "9"
base64 = "0.21.4"
axum = "0.6.20"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
